@@ -7,10 +7,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.lang.reflect.Field;
-import java.util.Collections;
-import java.util.List;
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class CafeTest {
@@ -24,28 +20,20 @@ public class CafeTest {
     }
 
     @Test
-    void testCreateOrder() throws NoSuchFieldException, IllegalAccessException {
+    void testCreateOrder() {
         Mockito.when(order.getTableNumber()).thenReturn(1);
         cafe.createOrder(order);
-
-        Field ordersField = Cafe.class.getDeclaredField("orders");
-        ordersField.setAccessible(true);
-        List<Order> orders = (List<Order>) ordersField.get(cafe);
-        assertEquals(1, orders.size());
+        assertEquals(1, cafe.getOrdersCount());
     }
 
     @Test
     void testDisplayOrderDetails_EmptyOrder() {
         Mockito.when(order.getTableNumber()).thenReturn(1);
-        Mockito.when(order.getDishes()).thenReturn(Collections.emptyList());
+        Mockito.when(order.getDishes()).thenReturn(List.of());
         cafe.createOrder(order);
         cafe.displayOrderDetails(1);
     }
 
-    @Test
-    void testDisplayOrderDetails_NonExistentTable() {
-        cafe.displayOrderDetails(999);
-    }
     @Test
     void testDisplayOrderDetails_WithDishes() {
         Mockito.when(order.getTableNumber()).thenReturn(1);
